// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands constraints query test (empty project / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceCwd = 'packages/workspace-a'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceCwd = 'packages/workspace-b'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: WorkspaceName = 'workspace-a'
➤ YN0000: WorkspaceName = 'workspace-b'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / filter w/ workspace_field_test/3) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / filter w/ workspace_field_test/4) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = foo
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / workspace_field w/ array FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: FieldValue = '[\\"/a\\",\\"/b\\",\\"/c\\"]'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / workspace_field w/ object FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: FieldValue = '{\\"type\\":\\"git\\",\\"url\\":\\"ssh://git@github.com/yarnpkg/berry.git\\",\\"directory\\":\\".\\"}'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (various field types / workspace_field w/ string FieldValue) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: FieldValue = foo
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test with a syntax error 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0043: Syntax error: . or operator expected at line 1, column 3
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints query test with an empty predicate 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0043: Syntax error: argument expected at line 1, column 11
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints query test with an unknown predicate 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0044: Existence error: procedure hello_word/1 not found (in top_level/0)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints query test without trailing . 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-0b6124'
➤ YN0000: Done
",
}
`;
